# tequio-core

./: .env.example  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  index.html  jornal  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
01-introduccion/: index.html
02-instalacion/: index.html
03-configuracion/: index.html
04-estructura-directorios/: index.html
05-ciclo-de-vida/: index.html
06-monolito-modular/: index.html
07-consola-jornal/: index.html
08-base-de-datos/: index.html
09-modelos/: index.html
10-repositorios-y-transacciones/: index.html
11-filtrado-y-paginacion/: index.html
12-jobs/: index.html
13-colas-y-tareas/: index.html
14-programacion-cron/: index.html
15-eventos-y-observers/: index.html
16-mediator/: index.html
17-pipeline/: index.html
18-logging/: index.html
19-errores/: index.html
20-correo/: index.html
21-lazy-y-scan/: index.html
Tests/: conftest.py  test_lazy.py  test_scan.py
Tests/Core/: test_Clock.py  test_Cron.py  test_FrameworkIsGeneric.py  test_FreeLayoutDiscovery.py  test_ModelDiscovery.py  test_PublicApi.py
Tests/Core/CeleryApp/: test_Dispatch.py  test_QueueNamespace.py  test_Retry.py  test_WorkerTaskDiscovery.py
Tests/Core/Config/: test_BrokerSettings.py  test_EnvFileLocation.py
Tests/Core/Console/: test_CliEntrypoint.py  test_CliErrorBoundary.py  test_Console.py  test_DiscoveryLoud.py  test_FormatCommandList.py  test_JornalLauncher.py  test_LauncherCommands.py  test_MakeWritesToAppDir.py  test_NewCommands.py  test_QueueWorkPool.py  test_Scaffold.py  test_ScheduleRunCommand.py  test_ScheduleWorkCommand.py
Tests/Core/Cron/: test_LockNamespace.py  test_LockStoreError.py  test_Schedule.py
Tests/Core/Database/: test_Factory.py  test_FakerLazy.py  test_Filtering.py  test_Migrations.py  test_Repository.py  test_Seeder.py  test_Session.py  test_Transactional.py
Tests/Core/Events/: test_EventDispatch.py  test_EventsQueue.py  test_Observer.py
Tests/Core/Jobs/: test_Jobs.py
Tests/Core/Mail/: test_Mail.py  test_MailDriver.py  test_Mailable.py  test_Mailer.py  test_MailerDispatch.py  test_Tasks.py
Tests/Core/Mediator/: test_Mediator.py
Tests/Core/Pipeline/: test_Pipeline.py
Tests/Core/Registry/: test_Registry.py
Tests/Core/Translate/: test_I18n.py
Tests/Core/View/: test_TemplateEngine.py
Tests/Modules/Demo/: test_DemoBuildingBlocks.py  test_DemoFlows.py
documentation/: 01-introduccion.md  02-instalacion.md  03-configuracion.md  04-estructura-directorios.md  05-ciclo-de-vida.md  06-monolito-modular.md  07-consola-jornal.md  08-base-de-datos.md  09-modelos.md  10-repositorios-y-transacciones.md  11-filtrado-y-paginacion.md  12-jobs.md  13-colas-y-tareas.md  14-programacion-cron.md  15-eventos-y-observers.md  16-mediator.md  17-pipeline.md  18-logging.md  19-errores.md  20-correo.md  21-lazy-y-scan.md  README.md
migrations/versions/: b1f4notes01_notes.py
search/: search_index.json
src/tequio/: __init__.py  lazy.py  scan.py
src/tequio/Core/: Discovery.py
src/tequio/Core/CeleryApp/: CeleryApp.py  Dispatch.py  Retry.py  __init__.py
src/tequio/Core/Clock/: Clock.py  __init__.py
src/tequio/Core/Config/: Settings.py  __init__.py
src/tequio/Core/Console/: Cli.py  Console.py  Scaffold.py  __init__.py
src/tequio/Core/Console/Commands/: DbCommands.py  MakeCommands.py  MigrateCommands.py  QueueWorkCommand.py  ScheduleRunCommand.py  ScheduleWorkCommand.py  SeedCommands.py  __init__.py
src/tequio/Core/Cron/: Cron.py  Schedule.py  __init__.py
src/tequio/Core/Database/: Base.py  Factory.py  Faker.py  Filtering.py  Migrations.py  Repository.py  Seeder.py  Session.py  SoftDelete.py  Timestamp.py  Transactional.py  __init__.py
src/tequio/Core/Errors/: Errors.py  __init__.py
src/tequio/Core/Events/: Dispatch.py  Observer.py  Tasks.py  __init__.py
src/tequio/Core/Jobs/: Jobs.py  __init__.py
src/tequio/Core/Logging/: Logging.py  __init__.py
src/tequio/Core/Mail/: Mail.py  Mailable.py  Mailer.py  Tasks.py  __init__.py
src/tequio/Core/Mediator/: Mediator.py  __init__.py
src/tequio/Core/Pipeline/: Pipeline.py  __init__.py
src/tequio/Core/Registry/: Registry.py  __init__.py
src/tequio/Core/Translate/: I18n.py  __init__.py
src/tequio/Core/View/: TemplateEngine.py  __init__.py
src/tequio/Dictionaries/: __init__.py
src/tequio/Models/: Note.py  __init__.py
src/tequio/Modules/Demo/: Commands.py  Events.py  __init__.py
src/tequio/Modules/Demo/Console/: __init__.py
src/tequio/Modules/Demo/Console/Commands/: ArchiveNoteCommand.py  __init__.py
src/tequio/Modules/Demo/Crons/: DailyDigestCron.py
src/tequio/Modules/Demo/Factories/: factories.py
src/tequio/Modules/Demo/Handlers/: ArchiveNoteHandler.py
src/tequio/Modules/Demo/Jobs/: ExportNotesJob.py
src/tequio/Modules/Demo/Mail/: DailyDigestMailable.py
src/tequio/Modules/Demo/Observers/: LogNoteCreated.py
src/tequio/Modules/Demo/Pipes/: CleanContent.py
src/tequio/Modules/Demo/Repositories/: NoteRepository.py
src/tequio/Modules/Demo/Resources/Views/emails/: digest.html.j2
src/tequio/Modules/Demo/Seeders/: DemoSeeder.py
src/tequio/Modules/Demo/Services/: NoteService.py
src/tequio/Resources/Lang/Emails/: master.en.yml  master.es.yml  mastersigned.en.yml  mastersigned.es.yml
src/tequio/Resources/Views/Emails/Trans/: master.html.j2  mastersigned.html.j2
src/tequio/_skeleton/: .env.example.tmpl  .gitignore.tmpl  README.md.tmpl  docker-compose.yml.tmpl  jornal.tmpl  pyproject.toml.tmpl
src/tequio/_skeleton/app/Models/: __init__.py.tmpl
src/tequio/_skeleton/app/Modules/Hello/: __init__.py.tmpl
src/tequio/_skeleton/logs/: .gitkeep.tmpl
src/tequio/_skeleton/migrations/: env.py.tmpl  script.py.mako.tmpl
src/tequio/_skeleton/migrations/versions/: .gitkeep.tmpl
src/tequio/migrations/versions/: b1f4notes01_notes.py
stylesheets/: extra.css
(+3 files in other folders)
